--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 section.masthead {
   position: relative;
   background-color: #343a40;
-  background: url("../assets/img/bg-masthead.jpg") no-repeat center center;
+  /* background: url("../assets/img/bg-masthead.jpg") no-repeat center center; */
   background-size: cover;
   padding-top: 8rem;
   padding-bottom: 8rem;
